--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
-<project name="Mobicents Sip Servlets" default="release" basedir=".">
+<project name="MobicentsSipServlets" default="release" basedir=".">
 	<property environment="sys"/>
-
+	<property name="this.path" value="${ant.file.MobicentsSipServlets}/../"></property>
 	<property file="build.properties" />
+	<condition property="jboss.dir" value="${jboss.home}" else="${sys.JBOSS_HOME}">
+		<isset property="jboss.home" />
+	</condition>
 	<property name="jboss.home" value="${sys.JBOSS_HOME}"/>
 	<condition property="mvn.executable" value="${sys.M2_HOME}\bin\mvn.bat" else="mvn">
 	    <os family="windows"/>
@@ -135,25 +138,26 @@
 	</target>
 	
 	<target name="release-mc-distro" depends="checks">
-
-		<mkdir dir="${jboss.home}/server/default/conf/dars"/>
-		<copy file="${base.path}/../src/site/resources/darfiles/click2call-dar.properties" 
-			todir="${jboss.home}/server/default/conf/dars"/>
+		<echo>Base path: ${this.path}</echo>
+		<mkdir dir="${jboss.dir}/server/default/conf/dars"/>
+		<copy file="${this.path}/../src/site/resources/darfiles/click2call-dar.properties" 
+			todir="${jboss.dir}/server/default/conf/dars"/>
 			
-		<copy file="${base.path}/server-jboss.xml" tofile="${jboss.home}/server/default/deploy/jboss-web.deployer/server.xml"/>
-		<copy file="${base.path}/context-jboss.xml" tofile="${jboss.home}/server/default/deploy/jboss-web.deployer/context.xml"/>
-		<copy file="${base.path}/jboss-service.xml" todir="${jboss.home}/server/default/deploy/jboss-web.deployer/META-INF"/>
-		<copy file="${base.path}/webserver-xmbean.xml" todir="${jboss.home}/server/default/deploy/jboss-web.deployer/META-INF"/>						
+		<copy file="${this.path}/server-jboss.xml" tofile="${jboss.dir}/server/default/deploy/jboss-web.deployer/server.xml"/>
+		<copy file="${this.path}/context-jboss.xml" tofile="${jboss.dir}/server/default/deploy/jboss-web.deployer/context.xml"/>
+		<copy file="${this.path}/jboss-service.xml" todir="${jboss.dir}/server/default/deploy/jboss-web.deployer/META-INF"/>
+		<copy file="${this.path}/webserver-xmbean.xml" todir="${jboss.dir}/server/default/deploy/jboss-web.deployer/META-INF"/>						
 
-		<exec executable="mvn" dir="${base.path}/..">
-			<arg line="clean install -P jboss -DJBOSS_HOME=${jboss.home}"/>
+		<exec executable="${mvn.executable}" dir="${base.path}/..">
+			<arg line="clean install -P jboss -DJBOSS_HOME=${jboss.dir}"/>
 		</exec>
 
-		<exec executable="mvn" dir="${base.path}/../../sip-servlets-examples/click-to-call">
+		<exec executable="${mvn.executable}" dir="${this.path}/../../sip-servlets-examples/click-to-call">
 			<arg line="clean install"/>
 		</exec>
 		
-		<copy file="${base.path}/../../sip-servlets-examples/click-to-call/target/click-to-call-servlet-1.0-SNAPSHOT.war" tofile="${jboss.home}/server/default/deploy/click2call.war" />
+		<copy file="${this.path}/../../sip-servlets-examples/click-to-call/target/click-to-call-servlet-1.0.war" 
+			tofile="${jboss.dir}/server/default/deploy/click2call.war" />
 		
 	</target>
 
