http://code.google.com/p/mobicents/issues/detail?id=83
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1459 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-management/build.xml
+++ b/sip-servlets-management/build.xml
@@ -37,7 +37,13 @@
 				</not>
 			</condition>
 		</fail>
-
+		<fail message="M2_REPO environment variable is not set. ">
+			<condition>
+				<not>
+					<isset property="system.M2_REPO" />
+				</not>
+			</condition>
+		</fail>
 		<path id="project.classpath">
 			<pathelement path="${project.modified.lib}/gwt-user.jar" />
 			<pathelement path="${project.modified.lib}/servlet-api.jar" />
