--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-constants</artifactId>
-			<version>1_0_0_ALPHA3</version>
+			<version>1.0.0.BETA1</version>
 		</dependency>			
 		<dependency>				
 			<groupId>org.mobicents.resources</groupId>
