http://code.google.com/p/mobicents/issues/detail?id=83
Sip Servlets libs from M2.

git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1548 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -152,7 +152,11 @@
 		<exec executable="${mvn.executable}" dir="${this.path}/..">
 			<arg line="clean install -P jboss -DJBOSS_HOME=${jboss.dir}"/>
 		</exec>
-
+		
+		<exec executable="${mvn.executable}" dir="${this.path}/..">
+			<arg line="dependency:copy-dependencies -DoutputDirectory=${jboss.dir}/server/default/lib -DincludeArtifactIds=jain-sip-api,jain-sip-ri,concurrent,dnsjava,stun4j"/>
+		</exec>
+		
 		<exec executable="${mvn.executable}" dir="${this.path}/../../sip-servlets-examples/click-to-call">
 			<arg line="clean install"/>
 		</exec>
