http://code.google.com/p/mobicents/issues/detail?id=83
Sip Servlets libs from M2.

git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1550 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -150,7 +150,7 @@
 		<copy verbose="true" overwrite="true" failonerror="true" file="${this.path}/webserver-xmbean.xml" todir="${jboss.dir}/server/default/deploy/jboss-web.deployer/META-INF"/>						
 		<echo>Done copying.</echo>
 		<exec executable="${mvn.executable}" dir="${this.path}/..">
-			<arg line="clean install -Pjboss-distro -DJBOSS_HOME=${jboss.dir}"/>
+			<arg line="clean install -Pjboss-distro -DJBOSS_HOME=${basedir}/output/jboss-${jboss.version}/"/>
 		</exec>
 		
 		<exec executable="${mvn.executable}" dir="${this.path}/../../sip-servlets-examples/click-to-call">
