http://code.google.com/p/mobicents/issues/detail?id=83
Sip Servlets libs from M2.

git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1555 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -241,7 +241,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/default/lib"/>
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/default/lib"/>
 									</tasks>
 								</configuration>
 								<goals>
@@ -262,7 +262,7 @@
 		 	            			</goals>
 		 	            			<configuration>
 									<includeArtifactIds>jain-sip-api,jain-sip-ri,concurrent,dnsjava,stun4j</includeArtifactIds>
-					    			<outputDirectory>${JBOSS_HOME}/server/default/lib</outputDirectory>
+					    			<outputDirectory>${JBOSS_HOME}/server/default/lib/</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>
 		 	        	</executions>
