Changing site url in poms to redirect to mobicents.org
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1775 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/jslee-sips-interop/jslee-events/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-events/pom.xml
@@ -13,7 +13,7 @@
 	<packaging>pom</packaging>
 	<version>1.0</version>
 	<name>JSLEE Parent part of the JSLEE-SIPS Demo</name>
-	<url>http://sip-servlets.dev.java.net</url>
+	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<modules>
 		<module>events</module>
 		<module>events-du</module>		
