--- a/sip-servlets-examples/shopping-demo/pom.xml
+++ b/sip-servlets-examples/shopping-demo/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>pom</packaging>
 	<version>1.0</version>
 	<name>Shopping Demo Parent</name>
-	<url>http://sip-servlets.dev.java.net</url>
+	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<modules>
 		<module>business</module>
 		<module>web</module>
