--- a/sip-servlets-examples/jslee-sips-interop/common/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/common/pom.xml
@@ -13,7 +13,7 @@
 	<version>1.0</version>
 	<packaging>jar</packaging>	
 	<name>JSLEE Parent part of the JSLEE-SIPS Demo</name>
-	<url>http://sip-servlets.dev.java.net</url>
+	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
