--- a/sip-servlets-examples/jslee-sips-interop/sips/ear/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/sips/ear/pom.xml
@@ -13,7 +13,7 @@
 	<packaging>ear</packaging>
 	<version>1.0</version>
 	<name>SIPS EAR of the JSLEE-SIPS Demo</name>
-	<url>http://sip-servlets.dev.java.net</url>
+	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<!-- j2ee dependencies -->
 		<dependency>
