--- a/sip-servlets-examples/jslee-sips-interop/sips/web/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/sips/web/pom.xml
@@ -13,7 +13,7 @@
 	<packaging>war</packaging>
 	<version>1.0</version>
 	<name>SIPS Webapp of the JSLEE-SIPS Demo</name>
-	<url>http://sip-servlets.dev.java.net</url>
+	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
