--- a/sip-servlets-examples/media-playback-servlet/pom.xml
+++ b/sip-servlets-examples/media-playback-servlet/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>war</packaging>
 	<version>1.0</version>
 	<name>Simple Media Playback Servlet Example</name>
-	<url>http://sip-servlets.dev.java.net</url>
+	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<!-- test dependencies -->
 		<dependency>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.mobicents.media</groupId>
 			<artifactId>mscontrol</artifactId>
-			<version>1.0-ALPHA</version>
+			<version>1.0-ALPHA3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.external.freetts</groupId>
@@ -147,6 +147,17 @@
 			<name>Java.net Repository for Maven</name>
 			<url>http://download.java.net/maven/2/</url>
 			<layout>default</layout>
+		</repository>
+		<repository>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<id>JbossRepository</id>
+			<name>Jboss Repository</name>
+			<url>http://repository.jboss.org/maven2</url>
 		</repository>
 	</repositories>
 
