--- a/sip-servlets-examples/simple-sip-servlet/pom.xml
+++ b/sip-servlets-examples/simple-sip-servlet/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>war</packaging>
 	<version>1.0</version>
 	<name>Simple Sip Servlet Example</name>
-	<url>http://sip-servlets.dev.java.net</url>
+	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<!-- test dependencies -->
 		<dependency>
