Changing site url in poms to redirect to mobicents.org
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1779 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/click-to-call-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/click-to-call-servlet/pom.xml
@@ -8,7 +8,7 @@
     <packaging>war</packaging>
     <version>1.0</version>
     <name>Click To Call</name>
-    <url>http://sip-servlets.dev.java.net</url>
+    <url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
     <dependencies>
         <!-- test dependencies -->
         <dependency>
