--- a/sip-servlets-spec/pom.xml
+++ b/sip-servlets-spec/pom.xml
@@ -12,7 +12,7 @@
 	<version>1.1.3</version>
 	<packaging>jar</packaging>
 	<name>Sip Servlets Specification Implementation</name>
-	<url>http://sip-servlets.dev.java.net</url>			
+	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>			
 	<profiles>
 		<profile>			
 			<id>tomcat</id>
@@ -57,31 +57,6 @@
 								<configuration>
 									<tasks>
 										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/default/lib"/>
-									</tasks>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>		
-			<id>jboss-distro</id>			
-			<build>			
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.1</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<configuration>
-									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/default/lib"/>
 									</tasks>
 								</configuration>
 								<goals>
