Issue 108 : Closed. ADDED : servlet-mapping parsing contribution from Thomas Leseney from Nexcom systems ADDED : servlet-mapping wiring into SipRuleSet, SipContext and SipApplicationDispatcher ADDED : servlet-mapping testcase
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1882 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -25,6 +25,7 @@
 		<module>session-state-uac</module>
 		<module>secure-servlet</module>
 		<module>annotated-servlet</module>
+		<module>servlet-mapping-sip-servlet</module>
 	</modules>
 	<dependencies>
 		<!-- test dependencies -->
