Fix for Issue 118 ADDED : SUBSCRIBE NOTIFY test applications and test cases MODIFIED : isInitial method on SipServletRequest
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1888 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -26,6 +26,8 @@
 		<module>secure-servlet</module>
 		<module>annotated-servlet</module>
 		<module>servlet-mapping-sip-servlet</module>
+		<module>notifier-sip-servlet</module>
+		<module>subscriber-sip-servlet</module>		
 	</modules>
 	<dependencies>
 		<!-- test dependencies -->
