--- a/sip-servlets-spec/pom.xml
+++ b/sip-servlets-spec/pom.xml
@@ -12,7 +12,25 @@
 	<version>1.1.3</version>
 	<packaging>jar</packaging>
 	<name>Sip Servlets Specification Implementation</name>
-	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>			
+	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
+	<build>
+		<plugins>		
+			<plugin>
+				<artifactId>maven-eclipse-plugin</artifactId>
+   				<groupId>org.mobicents.tools</groupId>
+    			<version>${mobicents.tools.mavenplugin.eclipse.version}</version>
+				<inherited>false</inherited>
+				<executions />
+				<configuration>
+					<!--classpathExcludes>
+					</classpathExcludes-->
+					<generateProjectsForModules>true</generateProjectsForModules>	
+					<resolveTransitiveDependencies>true</resolveTransitiveDependencies>
+					<eclipseProjectName>sip-servlets-spec</eclipseProjectName>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>			
 	<profiles>
 		<profile>			
 			<id>tomcat</id>
