Adding perf test for jboss
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1898 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/subscriber-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/subscriber-servlet/pom.xml
@@ -8,10 +8,10 @@
 		<version>0.3</version>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
-	<artifactId>shootist-sip-servlet</artifactId>
+	<artifactId>subscriber-sip-servlet</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
-	<name>Shootist Sip Servlet Example</name>
+	<name>Subscriber Sip Servlet Example</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<build>
 		<plugins>
