--- a/sip-servlets-test-suite/applications/notifier-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/notifier-servlet/pom.xml
@@ -8,10 +8,10 @@
 		<version>0.3</version>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
-	<artifactId>simple-sip-servlet</artifactId>
+	<artifactId>notifier-sip-servlet</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
-	<name>Simple Sip Servlet Example</name>
+	<name>Notifier Sip Servlet Example</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<build>
 		<plugins>
