--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -2,10 +2,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.mobicents.servlet.sip</groupId>
+		<artifactId>sip-servlets-test-suite-parent</artifactId>
+		<version>0.3</version>
+	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-test-suite-applications</artifactId>
 	<packaging>pom</packaging>
-	<version>0.3</version>
 	<name>Sip Servlets Test Suite Applications Parent Pom</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<modules>
@@ -25,9 +29,9 @@
 		<module>session-state-uac</module>
 		<module>secure-servlet</module>
 		<module>annotated-servlet</module>
-		<module>servlet-mapping-sip-servlet</module>
-		<module>notifier-sip-servlet</module>
-		<module>subscriber-sip-servlet</module>		
+		<module>servlet-mapping-servlet</module>
+		<module>notifier-servlet</module>
+		<module>subscriber-servlet</module>		
 	</modules>
 	<dependencies>
 		<!-- test dependencies -->
@@ -110,13 +114,4 @@
 			</plugin-->
 		</plugins>
 	</build>
-	<!-- repositories -->
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
 </project>
