--- a/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/testsuite.properties
+++ b/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/testsuite.properties
@@ -5,6 +5,7 @@
 #tomcat.home=E:/servers/apache-tomcat-6.0.14
 #project.home=E:/workspaces/sip-servlets
 #jeand linux props
-tomcat.home=/home/deruelle/java/apache-tomcat-6.0.14
+tomcat.home=/home/deruelle/servers/apache-tomcat-6.0.14
+tomcat.backup.home=/home/deruelle/servers/apache-tomcat-6.0.14-backup
 project.home=/home/deruelle/workspaces/mobicents-sip-servlets
 
