--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="applications/simple-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/simple-sip-servlet/src/main/java"/>
+	<classpathentry kind="src" output="applications/notifier-servlet/src/main/sipapp/WEB-INF/classes" path="applications/notifier-servlet/src/main/java"/>
+	<classpathentry kind="src" output="applications/subscriber-servlet/src/main/sipapp/WEB-INF/classes" path="applications/subscriber-servlet/src/main/java"/>
+	<classpathentry kind="src" output="applications/servlet-mapping-servlet/src/main/sipapp/WEB-INF/classes" path="applications/servlet-mapping-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/proxy-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/proxy-sip-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/click-to-call-servlet/src/main/sipapp/WEB-INF/classes" path="applications/click-to-call-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/shootist-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/shootist-sip-servlet/src/main/java"/>
@@ -32,7 +35,7 @@
 	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1/commons-logging-1.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.1/jain-sip-ri-1.2.1.jar"/>
 	<classpathentry kind="lib" path="testsuite/lib/sipunit.jar" sourcepath="/sipunit/src"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/catalina/6.0.14/catalina-6.0.14.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/catalina/6.0.14/catalina-6.0.14.jar" sourcepath="/TOMCAT_HOME/java"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/coyote/6.0.14/coyote-6.0.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/jsp-api/6.0.14/jsp-api-6.0.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/jasper/6.0.14/jasper-6.0.14.jar"/>
@@ -40,5 +43,6 @@
 	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/annotations-api/6.0.14/annotations-api-6.0.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/mobicents/servlet/sip/sip-servlets-impl/0.3/sip-servlets-impl-0.3.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/mobicents/servlet/sip/sip-servlets-spec/1.1.3/sip-servlets-spec-1.1.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer/1.0-SNAPSHOT/sip-balancer-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="testsuite/target/test-classes"/>
 </classpath>
