--- a/sip-servlets-test-suite/testsuite/pom.xml
+++ b/sip-servlets-test-suite/testsuite/pom.xml
@@ -2,10 +2,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.mobicents.servlet.sip</groupId>
+		<artifactId>sip-servlets-test-suite-parent</artifactId>
+		<version>0.3</version>
+	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-test-suite</artifactId>
 	<packaging>jar</packaging>
-	<version>0.3</version>
 	<name>sip-servlets-test-suite</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
@@ -106,54 +110,18 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!--dependency>
-			<groupId>tomcat</groupId>
-			<artifactId>tomcat-util</artifactId>
-			<version>5.5.15</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>tomcat</groupId>
-			<artifactId>tomcat-http</artifactId>
-			<version>5.5.15</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>tomcat</groupId>
-			<artifactId>jasper-compiler</artifactId>
-			<version>5.5.15</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>tomcat</groupId>
-			<artifactId>jasper-runtime</artifactId>
-			<version>5.5.15</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>tomcat</groupId>
-			<artifactId>servlets-default</artifactId>
-			<version>5.5.15</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>tomcat</groupId>
-			<artifactId>servlets-invoker</artifactId>
-			<version>5.5.15</version>
-		</dependency>
-
-		<dependency>
-			<groupId>directory-naming</groupId>
-			<artifactId>naming-resources</artifactId>
-			<version>0.8</version>
-		</dependency-->
-
 		<dependency>
 			<groupId>comp.java.cafesip</groupId>
 			<artifactId>sipunit</artifactId>
 			<version>0.0.6-BETA</version>
 			<scope>system</scope>
 			<systemPath>${basedir}/lib/sipunit.jar</systemPath>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mobicents.tools</groupId>
+			<artifactId>sip-balancer</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
