ADDED : maven documentation for MSS failover, JMX interface for balancer node. MODIFIED : roadmap
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1938 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -197,7 +197,7 @@
 										<goal> copy-dependencies </goal>
 		 	            			</goals>
 		 	            			<configuration>
-									<includeArtifactIds>jain-sip-api,jain-sip-ri,concurrent,log4j,commons-logging,dnsjava,stun4j</includeArtifactIds>
+									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,concurrent,log4j,commons-logging,dnsjava,stun4j</includeArtifactIds>
 					    			<outputDirectory>${env.CATALINA_HOME}/lib</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>
@@ -237,10 +237,10 @@
 		 	            			<id>copy-to-jboss-lib</id>
 		 	            			<phase>package</phase>
 		 	            			<goals>
-										<goal> copy-dependencies </goal>
+										<goal>copy-dependencies</goal>
 		 	            			</goals>
 		 	            			<configuration>
-									<includeArtifactIds>jain-sip-api,jain-sip-ri,concurrent,dnsjava,stun4j</includeArtifactIds>
+									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,concurrent,dnsjava,stun4j</includeArtifactIds>
 					    			<outputDirectory>${env.JBOSS_HOME}/server/default/lib</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>
