Upgrading media libs to BETA1
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@1942 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/media-playback-servlet/pom.xml
+++ b/sip-servlets-examples/media-playback-servlet/pom.xml
@@ -30,9 +30,16 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.mobicents.media</groupId>
-			<artifactId>mscontrol</artifactId>
-			<version>1.0-ALPHA3</version>
+			<groupId>org.mobicents.servers.media</groupId>
+			<artifactId>mobicents-server-media-mscontrol</artifactId>
+			<version>1.0.0.BETA1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>		
+			<groupId>org.mobicents.servers.media</groupId>
+			<artifactId>mobicents-server-media-constants</artifactId>
+			<version>1.0.0.BETA1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.external.freetts</groupId>
