--- a/sip-servlets-examples/media-playback-servlet/pom.xml
+++ b/sip-servlets-examples/media-playback-servlet/pom.xml
@@ -32,13 +32,13 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-mscontrol</artifactId>
-			<version>1.0.0.BETA1</version>
+			<version>1.0.0.BETA1-CP1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-constants</artifactId>
-			<version>1.0.0.BETA1</version>
+			<version>1.0.0.BETA1-CP1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
