--- a/sip-servlets-examples/facebook-c2c/pom.xml
+++ b/sip-servlets-examples/facebook-c2c/pom.xml
@@ -3,12 +3,18 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>mobicents</artifactId>
+		<groupId>org.mobicents</groupId>
+		<version>1-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
+	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>click-to-call-servlet</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
 	<name>Facebook Click To Call</name>
-	<url>http://sip-servlets.dev.java.net</url>
+	<url>http://vladimirralev.blogspot.com/2008/05/mobicents-on-javaone-2008.html</url>
 	<dependencies>
 		<!-- test dependencies -->
 		<dependency>
@@ -16,20 +22,21 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>
 		<!-- logging dependency -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
+			<version>${log4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging-api</artifactId>
-			<version>1.0.4</version>
+			<version>${commons-logging.version}</version>
 			<scope>provided</scope>
-		</dependency>		
+		</dependency>
+
 		<!-- j2ee dependencies -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -37,12 +44,14 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>unknown.json</groupId>
 			<artifactId>JSON-transport</artifactId>
@@ -107,29 +116,30 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<extensions>
-			<extension>
-				<groupId>org.jvnet.wagon-svn</groupId>
-				<artifactId>wagon-svn</artifactId>
-				<version>RELEASE</version>
-			</extension>
-		</extensions>
 	</build>
 	<!-- repositories -->
 	<repositories>
 		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
+			<id>JbossRepository</id>
+			<name>Jboss Repository</name>
+			<url>http://repository.jboss.org/maven2</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+		<repository>
+			<id>jboss-snapshots</id>
+			<name>JBoss Snapshot Repository</name>
+			<url>http://snapshots.jboss.org/maven2</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>maven2-repository</id>
-			<url>java-net:/maven2-repository/trunk/www/repository/</url>
-		</repository>
-	</distributionManagement>
 </project>
